--- a/etch_a_sketch.css
+++ b/etch_a_sketch.css
@@ -1,5 +1,12 @@
+body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1rem;
+    font-family: sans-serif;
+}
+
 #container {
-    margin-top: 25px;
     display: flex;
     flex-wrap: wrap;
     width: 512px;
