--- a/calculator.css
+++ b/calculator.css
@@ -17,7 +17,7 @@
     margin-bottom: 10px;
 }
 
-.output {
+#display {
     background-color: #333;
     color: white;
     padding: 20px;
@@ -39,6 +39,10 @@
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.button:hover {
+    background-color: #999;
 }
 
 .span-two {
